--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-validator": "^6.13.0"
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.13.0",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
