--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["davidanson.vscode-markdownlint"]
+  "recommendations": [
+    "davidanson.vscode-markdownlint",
+    "equinusocio.vsc-community-material-theme"
+  ]
 }
